Add password hashing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,5 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "litestar[standard,sqlalchemy]>=2.18.0",
+    "pwdlib[argon2]>=0.3.0",
 ]
